--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "vite-webpack-ts",
+  "name": "h5-vue3-vite-vuecli5",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "bootstrap": "pnpm install",
     "dev": "vite --mode development",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build:no-cache": "pnpm clean:cache && npm run build",
+    "build:dev": "vue-tsc && vue-cli-service build --mode development",
+    "build:test": "vue-tsc && vue-cli-service build --mode test",
+    "build:pre": "vue-tsc && vue-cli-service build --mode pre",
+    "build:prd": "vue-tsc && vue-cli-service build --mode production",
+    "build:no-cache": "pnpm clean:cache && pnpm run build:prd",
     "clean:cache": "rimraf node_modules/.cache/ && rimraf node_modules/.vite",
     "clean:lib": "rimraf node_modules",
     "type-check": "vue-tsc --noEmit --skipLibCheck",
@@ -24,11 +27,10 @@
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
-    "qs": "^6.11.2",
+    "qs": "^6.12.0",
     "vant": "^4.8.3",
     "vconsole": "^3.15.1",
     "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
@@ -59,8 +62,10 @@
     "postcss-html": "^1.5.0",
     "postcss-px-to-viewport-8-plugin": "^1.2.3",
     "prettier": "^3.0.3",
-    "sass": "^1.69.5",
     "rimraf": "^3.0.2",
+    "rollup-plugin-svg-sprites": "^1.2.5",
+    "svg-sprite-loader": "^6.0.11",
+    "sass": "^1.69.5",
     "sass-loader": "^12.0.0",
     "stylelint": "^15.11.0",
     "stylelint-config-html": "^1.1.0",
@@ -81,6 +86,7 @@
     "vite-plugin-environment": "^1.1.3",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html-template": "^1.1.5",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.8.5"
   },
