--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "vite --mode development",
     "serve": "vue-cli-service serve",
     "build:dev": "vue-tsc && vue-cli-service build --mode development",
-    "build:test": "vue-tsc && vue-cli-service build --mode test",
-    "build:pre": "vue-tsc && vue-cli-service build --mode pre",
-    "build:prd": "vue-tsc && vue-cli-service build --mode production",
+    "build:test": "vue-cli-service build --mode test",
+    "build:pre": "vue-cli-service build --mode pre",
+    "build:prd": "vue-cli-service build --mode production",
     "build:no-cache": "pnpm clean:cache && pnpm run build:prd",
     "clean:cache": "rimraf node_modules/.cache/ && rimraf node_modules/.vite",
     "clean:lib": "rimraf node_modules",
@@ -64,7 +64,6 @@
     "prettier": "^3.0.3",
     "rimraf": "^3.0.2",
     "rollup-plugin-svg-sprites": "^1.2.5",
-    "svg-sprite-loader": "^6.0.11",
     "sass": "^1.69.5",
     "sass-loader": "^12.0.0",
     "stylelint": "^15.11.0",
@@ -79,9 +78,10 @@
     "stylelint-config-standard-scss": "^11.0.0",
     "stylelint-less": "^2.0.0",
     "stylelint-order": "^6.0.3",
+    "svg-sprite-loader": "^6.0.11",
     "typescript": "~4.5.5",
     "unplugin-auto-import": "^0.16.7",
-    "unplugin-vue-components": "^0.25.2",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^4.0.3",
     "vite-plugin-environment": "^1.1.3",
     "vite-plugin-eslint": "^1.8.1",
