--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "bootstrap": "pnpm install",
     "dev": "vite --mode development",
-    "serve": "vue-cli-service serve",
-    "build:dev": "vue-tsc && vue-cli-service build --mode development",
+    "serve": "vue-cli-service serve --mode  dev",
+    "build:dev": "vue-cli-service build --mode dev",
     "build:test": "vue-cli-service build --mode test",
     "build:pre": "vue-cli-service build --mode pre",
-    "build:prd": "vue-cli-service build --mode production",
-    "build:no-cache": "pnpm clean:cache && pnpm run build:prd",
+    "build:prod": "vue-cli-service build --mode prod",
+    "build:no-cache": "pnpm clean:cache && pnpm run build:prod",
     "clean:cache": "rimraf node_modules/.cache/ && rimraf node_modules/.vite",
     "clean:lib": "rimraf node_modules",
     "type-check": "vue-tsc --noEmit --skipLibCheck",
@@ -51,12 +51,14 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "commitizen": "^4.3.0",
+    "compression-webpack-plugin": "^11.1.0",
     "cz-git": "^1.8.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
     "husky": "^8.0.3",
+    "image-webpack-loader": "^8.1.0",
     "lint-staged": "^15.0.2",
     "postcss": "^8.4.31",
     "postcss-html": "^1.5.0",
@@ -80,6 +82,7 @@
     "stylelint-order": "^6.0.3",
     "svg-sprite-loader": "^6.0.11",
     "typescript": "~4.5.5",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^4.0.3",
